--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="/dist/output.css" rel="stylesheet">
-  <script src="script.js" defer></script>
+  <link href="dist/output.css" rel="stylesheet">
+  <script src="src/script" defer></script>
 </head>
 
 <body class="flow-root">
