--- a/index.html
+++ b/index.html
@@ -133,17 +133,17 @@
 
     <div>
       <h3 class="text-xl">Consulta en postgres para las bicicletas:</h3>
-      <img class="w-full max-w-xl mt-2" src="../assets/screenshot1.png" alt="railway captura">
+      <img class="w-full max-w-xl mt-2" src="assets/screenshot1.png" alt="railway captura">
     </div>
 
     <div>
       <h3 class="text-xl">Consulta en postgres para los cascos:</h3>
-      <img class="w-full max-w-xl mt-2" src="../assets/screenshot2.png" alt="railway captura">
+      <img class="w-full max-w-xl mt-2" src="assets/screenshot2.png" alt="railway captura">
     </div>
 
     <div>
       <h3 class="text-xl">Código express para crear las rutas de la api</h3>
-      <img class="w-full max-w-xl mt-2" src="../assets/captura3.png" alt="railway captura">
+      <img class="w-full max-w-xl mt-2" src="assets/captura3.png" alt="railway captura">
 
     </div>
 
