--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="dist/output.css" rel="stylesheet">
-  <script src="src/script" defer></script>
+  <script src="src/script.js" defer></script>
 </head>
 
 <body class="flow-root">
