--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <header
     class="grid-cols-2 px-4 pb-8 mx-auto mt-12 space-y-8 md:space-y-0 md:grid py-14 max-w-7xl text-primary-content">
     <div class="flex items-center justify-center md:justify-start">
-      <img class="w-full max-w-md mt-3" src="../assets/girl_bike.svg" alt="">
+      <img class="w-full max-w-md mt-3" src="assets/girl_bike.svg" alt="">
     </div>
 
     <div class="grid grid-cols-2 gap-5">
